infra/k8s/ingress/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: chat.dev
      http:
        paths:
          - path: /mongo-express/users
            pathType: Prefix
            backend:
              service:
                name: users-mongo-express-srv
                port:
                  number: 8081
          - path: /mongo-express/auth
            pathType: Prefix
            backend:
              service:
                name: auth-mongo-express-srv
                port:
                  number: 8081
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: users-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
